Fixing errors and adding new endpoints